# simple-text-editor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: main.cpp.37DFACAB9F5DA075.idx
src/: editor.cpp  editor.hpp  main.cpp
